Закончил главную страницу с адаптивом

--- a/src/html/components/_feedback-services.htm
+++ b/src/html/components/_feedback-services.htm
@@ -1,4 +1,4 @@
-<section class="feedback sections">
+<section class="feedback">
     <div class="feedback-container">
         <div class="feedback__body">
             <div class="feedback__content">
@@ -35,35 +35,38 @@
                 </div>
             </div>
             <div class="feedback__form">
-                <form>
-                    <div class="form__body">
-                        <div class="form__row">
-                            <label>
-                                <span class="label">Как к вам обращаться?</span>
-                                <input type="text" name="name" placeholder="Ваше имя" class="input" required>
-                            </label>
-                        </div>
-                        <div class="form__row">
-                            <label>
-                                <span class="label">Контактный телефон</span>
-                                <input type="tel" name="phone" placeholder="+7 (___) ___-__-__" class="input" required>
-                            </label>
-                        </div>
-                        <div class="form__row">
-                            <div class="form-consent">
-                                <label class="custom-checkbox">
-                                    <input type="checkbox" name="personal_data_agreement" required>
-                                    <span class="checkbox-box"></span>
-                                    <span class="checkbox-text">
-                                        Нажимая на кнопку «Записаться на прием», вы соглашаетесь на <a href="#"
-                                            target="_blank">обработку персональных данных.</a>
-                                    </span>
+                <div class="form">
+                    <form>
+                        <div class="form__body">
+                            <div class="form__row">
+                                <label>
+                                    <span class="label">Как к вам обращаться?</span>
+                                    <input type="text" name="name" placeholder="Ваше имя" class="input" required>
                                 </label>
                             </div>
+                            <div class="form__row">
+                                <label>
+                                    <span class="label">Контактный телефон</span>
+                                    <input type="tel" name="phone" placeholder="+7 (___) ___-__-__" class="input"
+                                        required>
+                                </label>
+                            </div>
+                            <div class="form__row">
+                                <div class="form-consent">
+                                    <label class="custom-checkbox">
+                                        <input type="checkbox" name="personal_data_agreement" required>
+                                        <span class="checkbox-box"></span>
+                                        <span class="checkbox-text">
+                                            Нажимая на кнопку «Записаться на прием», вы соглашаетесь на <a href="#"
+                                                target="_blank">обработку персональных данных.</a>
+                                        </span>
+                                    </label>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn-form btn-white">Записаться на прием</button>
                         </div>
-                        <button type="submit" class="btn-form btn-white">Записаться на прием</button>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
