--- a/src/html/components/_hero.htm
+++ b/src/html/components/_hero.htm
@@ -5,7 +5,7 @@
                 <ul class="sidebar__list">
                     <li>
                         <a href="#">
-                            <span>Диагностика</span>
+                            <span>Лечение</span>
                             <span class="icon">
                                 <svg>
                                     <use xlink:href="@img/icons/sprite.svg#arrow"></use>
@@ -44,7 +44,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <span>Профессиональная гигиена</span>
+                            <span>Удаление</span>
                             <span class="icon">
                                 <svg>
                                     <use xlink:href="@img/icons/sprite.svg#arrow"></use>
@@ -82,7 +82,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <span>Хирургия и имплантация</span>
+                            <span>Протезирование</span>
                             <span class="icon">
                                 <svg>
                                     <use xlink:href="@img/icons/sprite.svg#arrow"></use>
@@ -120,7 +120,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <span>Cтоматология</span>
+                            <span>Коронки</span>
                             <span class="icon">
                                 <svg>
                                     <use xlink:href="@img/icons/sprite.svg#arrow"></use>
@@ -130,7 +130,27 @@
                     </li>
                     <li>
                         <a href="#">
-                            <span>Ортопедия</span>
+                            <span>Виниры</span>
+                            <span class="icon">
+                                <svg>
+                                    <use xlink:href="@img/icons/sprite.svg#arrow"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>Имплантация</span>
+                            <span class="icon">
+                                <svg>
+                                    <use xlink:href="@img/icons/sprite.svg#arrow"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>Костная и десневая пластика при имплантации</span>
                             <span class="icon">
                                 <svg>
                                     <use xlink:href="@img/icons/sprite.svg#arrow"></use>
@@ -151,16 +171,6 @@
                     <li>
                         <a href="#">
                             <span>Ортодонтия</span>
-                            <span class="icon">
-                                <svg>
-                                    <use xlink:href="@img/icons/sprite.svg#arrow"></use>
-                                </svg>
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Анестезиология</span>
                             <span class="icon">
                                 <svg>
                                     <use xlink:href="@img/icons/sprite.svg#arrow"></use>
