--- a/src/html/components/_main-experts.htm
+++ b/src/html/components/_main-experts.htm
@@ -215,5 +215,8 @@
             </div>
 
         </div>
+        <div class="sections__footer">
+            <a href="#">Все врачи клиники</a>
+        </div>
     </div>
 </section>
