--- a/src/html/components/_main-price.htm
+++ b/src/html/components/_main-price.htm
@@ -24,8 +24,10 @@
                                     <div class="descr">Осмотр, консультация</div>
                                 </div>
                                 <div class="box">
-                                    <div class="old-price">600 ₽</div>
-                                    <div class="new-price">540 ₽</div>
+                                    <div class="price__box">
+                                        <div class="old-price">600 ₽</div>
+                                        <div class="new-price">540 ₽</div>
+                                    </div>
                                     <button type="button" data-name="Прием врача-стоматолога первичный"
                                         class="btn-form">Записаться</button>
                                 </div>
@@ -36,7 +38,10 @@
                                     <div class="descr">Осмотр, консультация</div>
                                 </div>
                                 <div class="box">
-                                    <div class="new-price">0 ₽</div>
+                                    <div class="price__box">
+                                        <div class="old-price">600 ₽</div>
+                                        <div class="new-price">540 ₽</div>
+                                    </div>
                                     <button type="button" data-name="Прием врача-стоматолога повторный"
                                         class="btn-form">Записаться</button>
                                 </div>
@@ -47,7 +52,10 @@
                                     <div class="descr">Осмотр, консультация</div>
                                 </div>
                                 <div class="box">
-                                    <div class="new-price">1 200 ₽</div>
+                                    <div class="price__box">
+                                        <div class="old-price">600 ₽</div>
+                                        <div class="new-price">540 ₽</div>
+                                    </div>
                                     <button type="button" data-name="Прием Главного врача Конищева В.К."
                                         class="btn-form">Записаться</button>
                                 </div>
@@ -72,8 +80,10 @@
                                     <div class="descr">Осмотр, консультация</div>
                                 </div>
                                 <div class="box">
-                                    <div class="old-price">600 ₽</div>
-                                    <div class="new-price">540 ₽</div>
+                                    <div class="price__box">
+                                        <div class="old-price">600 ₽</div>
+                                        <div class="new-price">540 ₽</div>
+                                    </div>
                                     <button type="button" data-name="Прием врача-стоматолога первичный"
                                         class="btn-form">Записаться</button>
                                 </div>
@@ -84,7 +94,10 @@
                                     <div class="descr">Осмотр, консультация</div>
                                 </div>
                                 <div class="box">
-                                    <div class="new-price">0 ₽</div>
+                                    <div class="price__box">
+                                        <div class="old-price">600 ₽</div>
+                                        <div class="new-price">540 ₽</div>
+                                    </div>
                                     <button type="button" data-name="Прием врача-стоматолога повторный"
                                         class="btn-form">Записаться</button>
                                 </div>
@@ -95,7 +108,10 @@
                                     <div class="descr">Осмотр, консультация</div>
                                 </div>
                                 <div class="box">
-                                    <div class="new-price">1 200 ₽</div>
+                                    <div class="price__box">
+                                        <div class="old-price">600 ₽</div>
+                                        <div class="new-price">540 ₽</div>
+                                    </div>
                                     <button type="button" data-name="Прием Главного врача Конищева В.К."
                                         class="btn-form">Записаться</button>
                                 </div>
