--- a/src/html/components/_main-sales.htm
+++ b/src/html/components/_main-sales.htm
@@ -53,5 +53,8 @@
                 </div>
             </article>
         </div>
+        <div class="sections__footer">
+            <a href="#">Все акции клиники</a>
+        </div>
     </div>
 </section>
