--- a/src/html/components/_main-stories.htm
+++ b/src/html/components/_main-stories.htm
@@ -191,5 +191,9 @@
             </div>
 
         </div>
+
+        <div class="sections__footer">
+            <a href="#">Все истории пациентов</a>
+        </div>
     </div>
 </section>
