--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,7 +37,7 @@ $minWidth: 375;
 // Ширина полотна (макета)
 $maxWidth: 1920;
 // Ширина ограничивающего контейнера (0 = Нет ограничения)
-$maxWidthContainer: 1640;
+$maxWidthContainer: 1690;
 // Общее отступление у контейнера
 // (30 = по 15px слева и справа, 0 = нет отступа)
 $containerPadding: 30;
@@ -47,14 +47,14 @@ $containerWidth: $maxWidthContainer + $containerPadding;
 
 // Брейк-поинты
 $pc: em($containerWidth); // ПК, ноутбуки и некоторые планшеты в горизонтальном положении
-$tablet: 991.98px; // Планшеты, некоторые телефоны в горизонтальном положении
+$tablet: 1023.98px; // Планшеты, некоторые телефоны в горизонтальном положении
 $mobile: 767.98px; // Телефоны L
 $mobileSmall: 479.98px; // Телефоны S
 
 // Тип адаптива:
 // 1 = отзывчивость (у контейнера нет брейкпоинтов),
 // 2 = по брейк-поинт (контейнер меняет свою ширину по брейк-поинт)
-$responsiveType: 1;
+$responsiveType: 0;
 
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 // ============================================================================================================================================================================================================================================================================================================================================================================================
@@ -88,6 +88,11 @@ body {
 	// Прижимаем footer
 	> main {
 		flex: 1 1 auto;
+		padding-top: 151px;
+
+		@media (max-width: 1360px) {
+			padding-top: 68px;
+		}
 	}
 	// Фикс для слайдеров
 	> * {
@@ -122,24 +127,26 @@ body {
 	// Брейк-поинтами
 	[class*="-container"] {
 		margin: 0 auto;
-		@if ($maxWidthContainer>0) {
-			max-width: rem($containerWidth);
-		} @else {
-			@if ($containerPadding>0) {
-				padding: 0 rem(math.div($containerPadding, 2));
-			}
+		padding: 0 15px;
+		width: 100%;
+
+		@media (min-width: 581px) {
+			max-width: 560px;
 		}
-		@media (max-width: $pc) {
-			max-width: rem(970);
+		@media (min-width: 768px) {
+			max-width: 768px;
 		}
-		@media (max-width: $tablet) {
-			max-width: rem(750);
+
+		@media (min-width: 1025px) {
+			max-width: 991px;
 		}
-		@media (max-width: $mobile) {
-			max-width: none;
-			@if ($containerPadding>0 and $maxWidthContainer>0) {
-				padding: 0 rem(math.div($containerPadding, 2));
-			}
+
+		@media (min-width: 1361px) {
+			max-width: 1320px;
+		}
+
+		@media (min-width: 1741px) {
+			max-width: 1720px;
 		}
 	}
 }
@@ -167,6 +174,9 @@ body {
 @import "./components/certificates";
 @import "./components/expert-card";
 @import "./components/expert-card-certificates";
+@import "./components/service";
+@import "./components/advantages";
+@import "./components/news";
 
 // Подключение стилей отдельных страниц
 @import "home";
