--- a/src/scss/components/_contacts.scss
+++ b/src/scss/components/_contacts.scss
@@ -11,6 +11,19 @@
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		gap: 60px;
+
+		@media (max-width: 1740px) {
+			padding: 42px;
+			grid-template-columns: 1fr 480px;
+		}
+
+		@media (max-width: 1360px) {
+			grid-template-columns: repeat(1, 1fr);
+		}
+
+		@media (max-width: $mobile) {
+			padding: 20px;
+		}
 		.content {
 			.name {
 				color: $color-title;
@@ -19,6 +32,14 @@
 				font-weight: 300;
 				line-height: 160%;
 				margin-bottom: 30px;
+
+				@media (max-width: $mobile) {
+					font-size: 24px;
+				}
+
+				@media (max-width: $mobile) {
+					margin-bottom: 20px;
+				}
 			}
 			.box-grid {
 				display: flex;
@@ -26,6 +47,14 @@
 				justify-content: space-between;
 				padding-bottom: 24px;
 				border-bottom: 1px solid #c9d6df;
+
+				@media (max-width: $tablet) {
+					flex-direction: column;
+				}
+
+				@media (max-width: $mobile) {
+					gap: 20px;
+				}
 				.adress {
 					color: $mainColor;
 					font-size: 30px;
@@ -36,6 +65,14 @@
 					margin-bottom: 24px;
 					padding-left: 8px;
 					border-left: 3px solid #c9d6df;
+
+					@media (max-width: 1740px) {
+						font-size: 24px;
+					}
+
+					@media (max-width: $mobile) {
+						font-size: 16px;
+					}
 				}
 				.work {
 					color: $mainColor;
@@ -44,6 +81,10 @@
 					font-weight: 300;
 					line-height: 120%;
 					letter-spacing: 0.6px;
+
+					@media (max-width: $mobile) {
+						font-size: 16px;
+					}
 				}
 				.transport {
 					.name {
@@ -54,6 +95,10 @@
 						line-height: 140%;
 						letter-spacing: 0.72px;
 						margin-bottom: 6px;
+
+						@media (max-width: $mobile) {
+							font-size: 16px;
+						}
 					}
 					&__box {
 						display: flex;
@@ -71,6 +116,10 @@
 							font-weight: 300;
 							line-height: 120%;
 							letter-spacing: 0.6px;
+
+							@media (max-width: $mobile) {
+								font-size: 16px;
+							}
 						}
 					}
 				}
@@ -82,6 +131,11 @@
 				display: flex;
 				justify-content: space-between;
 				align-items: flex-end;
+
+				@media (max-width: $tablet) {
+					flex-direction: column;
+					align-items: normal;
+				}
 				.wrap {
 					.phone {
 						display: flex;
@@ -93,6 +147,10 @@
 							font-weight: 300;
 							line-height: 140%;
 							letter-spacing: 0.72px;
+							white-space: nowrap;
+							@media (max-width: 1740px) {
+								font-size: 20px;
+							}
 						}
 
 						a {
@@ -101,6 +159,9 @@
 							font-style: normal;
 							font-weight: 300;
 							line-height: 23px;
+							@media (max-width: 1740px) {
+								font-size: 24px;
+							}
 						}
 					}
 					.social__list {
@@ -121,6 +182,12 @@
 									height: 30px;
 									color: $accentColor;
 								}
+
+								@media (max-width: $mobile) {
+									span {
+										font-size: 16px;
+									}
+								}
 							}
 						}
 					}
@@ -134,6 +201,11 @@
 				gap: 30px;
 				padding: 24px 0;
 				border-bottom: 1px solid #c9d6df;
+
+				@media (max-width: $tablet) {
+					flex-direction: column;
+					align-items: normal;
+				}
 				.wrap {
 					.email {
 						display: flex;
@@ -145,6 +217,14 @@
 							font-weight: 300;
 							line-height: 140%;
 							letter-spacing: 0.72px;
+							white-space: nowrap;
+							@media (max-width: 1740px) {
+								font-size: 20px;
+							}
+
+							@media (max-width: $mobile) {
+								font-size: 16px;
+							}
 						}
 						a {
 							color: $color-title;
@@ -152,6 +232,12 @@
 							font-style: normal;
 							font-weight: 300;
 							line-height: 140%;
+							@media (max-width: 1740px) {
+								font-size: 24px;
+							}
+							@media (max-width: $mobile) {
+								font-size: 16px;
+							}
 						}
 					}
 					.btn-form {
@@ -190,5 +276,9 @@
 		border: 1px solid #eaf3fa;
 		background-color: #eee;
 		height: 575px;
+
+		@media (max-width: 1740px) {
+			height: 450px;
+		}
 	}
 }
