--- a/src/scss/components/_experts.scss
+++ b/src/scss/components/_experts.scss
@@ -34,6 +34,10 @@
 			}
 		}
 	}
+
+	@media (max-width: $mobile) {
+		grid-template-columns: repeat(1, 1fr);
+	}
 	&__media {
 		border-radius: 3px;
 		overflow: hidden;
@@ -42,6 +46,10 @@
 		picture {
 			height: 560px;
 			transition: all 0.3s ease 0s;
+
+			@media (max-width: $mobile) {
+				height: 350px;
+			}
 		}
 	}
 	&__post {
@@ -54,6 +62,10 @@
 		font-style: normal;
 		font-weight: 300;
 		line-height: 140%;
+
+		@media (max-width: $mobile) {
+			font-size: 18px;
+		}
 	}
 	&__content {
 		padding: 34px 20px 34px 30px;
@@ -61,6 +73,10 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+
+		@media (max-width: $mobile) {
+			padding: 20px;
+		}
 
 		span {
 			color: $accentColor;
@@ -70,6 +86,10 @@
 			line-height: 140%;
 			letter-spacing: 0.72px;
 			transition: all 0.3s ease 0s;
+
+			@media (max-width: 1740px) {
+				font-size: 18px;
+			}
 		}
 	}
 	&__wrapper {
@@ -82,6 +102,15 @@
 			line-height: 130%;
 			letter-spacing: 0.96px;
 			margin-bottom: 20px;
+
+			@media (max-width: 1740px) {
+				font-size: 28px;
+				margin-bottom: 15px;
+			}
+
+			@media (max-width: $mobile) {
+				font-size: 22px;
+			}
 		}
 		.specialization {
 			color: #000;
@@ -90,6 +119,9 @@
 			line-height: 120%;
 			letter-spacing: 0.81px;
 			margin-bottom: 16px;
+			@media (max-width: 1740px) {
+				font-size: 20px;
+			}
 		}
 		.experience {
 			color: #6b808f;
@@ -99,6 +131,13 @@
 			line-height: 140%;
 			letter-spacing: 0.6px;
 			margin-bottom: 16px;
+			@media (max-width: 1740px) {
+				font-size: 18px;
+			}
+
+			@media (max-width: $mobile) {
+				font-size: 16px;
+			}
 		}
 		.description {
 		}
