--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -3,6 +3,15 @@
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		gap: 30px;
+
+		@media (max-width: $tablet) {
+			grid-template-columns: repeat(2, 1fr);
+			gap: 20px;
+		}
+
+		@media (max-width: $mobile) {
+			grid-template-columns: repeat(1, 1fr);
+		}
 	}
 	&__item {
 		display: flex;
@@ -31,6 +40,10 @@
 			picture {
 				transition: all 0.3s ease 0s;
 				height: 380px;
+
+				@media (max-width: 1740px) {
+					height: 360px;
+				}
 			}
 		}
 		.content {
@@ -47,6 +60,10 @@
 				line-height: 140%;
 				letter-spacing: 0.72px;
 				transition: all 0.3s ease 0s;
+
+				@media (max-width: $tablet) {
+					font-size: 18px;
+				}
 			}
 		}
 		.box {
@@ -68,6 +85,10 @@
 			font-weight: 300;
 			line-height: 140%;
 			letter-spacing: 0.72px;
+
+			@media (max-width: $tablet) {
+				font-size: 18px;
+			}
 		}
 	}
 }
