--- a/src/scss/components/_stories.scss
+++ b/src/scss/components/_stories.scss
@@ -28,6 +28,10 @@
 			}
 		}
 	}
+
+	@media (max-width: $mobile) {
+		grid-template-columns: repeat(1, 1fr);
+	}
 	&__media {
 		border-radius: 3px;
 		overflow: hidden;
@@ -36,6 +40,10 @@
 		picture {
 			height: 410px;
 			transition: all 0.3s ease 0s;
+
+			@media (max-width: $mobile) {
+				height: 200px;
+			}
 		}
 	}
 
@@ -46,6 +54,10 @@
 		flex-direction: column;
 		justify-content: space-between;
 
+		@media (max-width: $mobile) {
+			padding: 20px;
+		}
+
 		span {
 			color: $accentColor;
 			font-size: 24px;
@@ -54,18 +66,30 @@
 			line-height: 140%;
 			letter-spacing: 0.72px;
 			transition: all 0.3s ease 0s;
+			margin-top: 15px;
+			@media (max-width: $tablet) {
+				font-size: 18px;
+			}
 		}
 	}
 	&__wrapper {
 		.name {
 			color: $color-title;
 			font-family: BebasNeueCyrillic;
-			font-size: 32px;
+			font-size: 34px;
 			font-style: normal;
 			font-weight: 400;
 			line-height: 130%;
 			letter-spacing: 0.96px;
 			margin-bottom: 20px;
+
+			@media (max-width: 1740px) {
+				font-size: 28px;
+			}
+
+			@media (max-width: $mobile) {
+				font-size: 20px;
+			}
 		}
 
 		.description {
