--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,72 +1,138 @@
 //====================================================================================================
 .header {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	z-index: 100;
+	background-color: #fff;
+	&._header-scroll {
+		position: fixed;
+		top: -200%;
+	}
+
+	&._header-show {
+		transition: top 0.3s ease 0s;
+		top: 0;
+	}
 	&__top {
-		margin-bottom: 20px;
+		padding: 8px 0;
+
+		@media (max-width: 1360px) {
+			padding: 0;
+		}
 	}
 	&__top-body {
 		display: flex;
 		align-items: center;
+
+		@media (max-width: 1360px) {
+			justify-content: space-between;
+		}
+
+		.btn-form {
+			display: none;
+			@media (max-width: 1360px) {
+				display: block;
+				max-width: 188px;
+				font-size: 20px;
+			}
+
+			@media (max-width: $mobile) {
+				display: none;
+			}
+		}
 	}
 	&__logo {
-		width: 488px;
 		flex-shrink: 0;
-		margin-right: 89px;
+		margin-right: 64px;
+		@media (max-width: 1360px) {
+			margin-right: 15px;
+		}
+
+		@media (max-width: $mobile) {
+			max-width: 170px;
+		}
 	}
 	&__adress {
 		display: flex;
-		flex-direction: column;
-		gap: 3px;
+		gap: 24px;
 
+		@media (max-width: 1740px) {
+			flex-direction: column;
+			gap: 10px;
+		}
+
+		@media (max-width: 1360px) {
+			display: none;
+		}
 		li {
 			display: flex;
-			align-items: flex-end;
+			align-items: center;
 			gap: 10px;
 			span {
 				font-size: 22px;
 				color: $mainColor;
 			}
 
-			a {
-				display: flex;
-				align-items: center;
-				white-space: nowrap;
-				gap: 13px;
+			.icon {
+				width: 24px;
+				height: 24px;
 				color: $accentColor;
-				padding: 2px 14px;
-				border: 2px solid $accentColor;
-				border-radius: 4px;
-				font-size: 22px;
-				font-family: BebasNeueCyrillic;
-				line-height: 115%;
-				span {
-					color: $accentColor;
-				}
-
-				.icon {
-					width: 18px;
-					height: 24px;
-					color: $accentColor;
-				}
 			}
 		}
 	}
 	&__actions {
-		margin-left: auto;
 		display: flex;
 		flex-direction: column;
 		align-items: flex-end;
+		margin-left: auto;
+		@media (max-width: 1360px) {
+			margin-left: 0;
+			align-items: center;
+		}
+
+		@media (max-width: $mobile) {
+			flex-direction: row;
+			gap: 15px;
+			.text {
+				display: none;
+			}
+		}
 	}
 	&__phone {
 		color: $mainColor;
 		font-family: BebasNeue;
-		font-size: 53px;
+		font-size: 34px;
 		font-style: normal;
 		font-weight: 400;
 		line-height: 110%;
 		text-transform: uppercase;
+		display: flex;
+		align-items: center;
+		gap: 20px;
+		.icon {
+			display: none;
+			color: $accentColor;
+			width: 30px;
+			height: 30px;
+
+			@media (max-width: $mobile) {
+				display: block;
+			}
+		}
+
+		@media (max-width: 1360px) {
+			font-size: 26px;
+		}
 	}
 	&__bottom {
 		background: #929394;
+
+		@media (max-width: 1360px) {
+			display: none;
+		}
 	}
 	&__bottom-body {
 		display: flex;
@@ -84,8 +150,23 @@
 		display: flex;
 		gap: 55px;
 		align-items: center;
-
+		@media (max-width: 1740px) {
+			gap: 43px;
+		}
 		li {
+			position: relative;
+			height: 68px;
+			display: flex;
+			justify-items: center;
+			align-items: center;
+			@media (any-hover: hover) {
+				&:hover > {
+					.sub-menu {
+						opacity: 1;
+						visibility: visible;
+					}
+				}
+			}
 			a {
 				color: #fff;
 				font-family: BebasNeueCyrillic;
@@ -93,8 +174,242 @@
 				font-style: normal;
 				font-weight: 400;
 				line-height: normal;
+				display: flex;
+				align-items: center;
+				gap: 10px;
+				transition: all 0.3s ease 0s;
+
+				@media (any-hover: hover) {
+					&:hover {
+						color: $accentColor;
+
+						.arrow {
+							transform: rotate(270deg);
+						}
+					}
+				}
+				@media (max-width: 1740px) {
+					font-size: 18px;
+				}
+
+				.arrow {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					width: 12px;
+					height: 12px;
+					transform: rotate(90deg);
+					transition: all 0.3s ease 0s;
+				}
 			}
 		}
+
+		.sub-menu {
+			position: absolute;
+			display: flex;
+			flex-direction: column;
+			z-index: 100;
+			height: 454px;
+			gap: 15px;
+			top: 68px;
+			left: -30px;
+			width: 398px;
+			padding: 14px 58px 27px 58px;
+			background: #eaf3fa;
+			opacity: 0;
+			visibility: hidden;
+			transition: all 0.2s ease 0s;
+			box-shadow: 4px 0px 18px -3px rgba(0, 0, 0, 0.2);
+			li {
+				a {
+					color: $mainColor;
+					font-family: HattoriHanzo;
+					font-size: 18px;
+					font-style: normal;
+					font-weight: 300;
+					line-height: 140%; /* 25.2px */
+					letter-spacing: 0.54px;
+					text-transform: uppercase;
+					transition: all 0.3s ease 0s;
+					@media (any-hover: hover) {
+						&:hover {
+							color: $accentColor;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+.menu-mobile {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	max-width: 510px;
+	padding: 26px 30px;
+	min-height: 0;
+	display: flex;
+	flex-direction: column;
+	background-color: #fff;
+	justify-content: start;
+	overflow-y: auto;
+	overflow-x: hidden;
+	gap: 0;
+	transform: translateX(100%);
+	transition: all 0.6s ease 0s;
+	z-index: 150;
+	.menu-open & {
+		transform: translateX(0%);
+	}
+
+	&__overlay {
+		backdrop-filter: blur(3px);
+		background: rgba(23, 23, 23, 0.4);
+		position: fixed;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		width: 100%;
+		height: 100vh;
+		opacity: 0;
+		visibility: hidden;
+		transform: translateX(100%);
+		transition: 0.6s ease;
+		z-index: 140;
+
+		.menu-open & {
+			opacity: 1;
+			visibility: visible;
+			transform: translateX(0%);
+		}
+	}
+
+	&__header {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+
+		.name {
+			color: $color-title;
+			font-family: BebasNeueCyrillic;
+			font-size: 30px;
+			font-weight: 400;
+			text-transform: uppercase;
+		}
+
+		.icon {
+			width: 30px;
+			height: 30px;
+		}
+
+		.close {
+			padding: 0;
+			margin: 0;
+			border: none;
+		}
+	}
+
+	&__body {
+		width: 100%;
+		padding: 20px 0px;
+		border-bottom: 1px solid #b9c7d2;
+	}
+	&__list {
+		display: flex;
+		flex-direction: column;
+		gap: 12px;
+		align-items: start;
+		width: 100%;
+
+		& > li {
+		}
+
+		li {
+			position: relative;
+			width: 100%;
+			a {
+				color: $mainColor;
+				font-size: 20px;
+				font-weight: 300;
+				line-height: 140%;
+				letter-spacing: 0.6px;
+				text-transform: uppercase;
+				transition: all 0.3s ease 0s;
+				display: flex;
+				justify-content: space-between;
+				gap: 10px;
+				align-items: center;
+
+				@media (any-hover: hover) {
+					&:hover {
+						color: $accentColor;
+					}
+				}
+
+				.arrow {
+					flex: 0 0 20px;
+					width: 20px;
+					height: 20px;
+					transition: all 0.3s ease 0s;
+					display: block;
+					opacity: 1;
+					visibility: visible;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+				}
+			}
+
+			&._open {
+				> .sub-menu {
+					max-height: 1000px;
+					opacity: 1;
+					visibility: visible;
+				}
+
+				> a > .arrow {
+					transform: rotate(90deg);
+				}
+
+				> a {
+					color: $accentColor;
+				}
+			}
+		}
+		.sub-menu {
+			display: flex;
+			flex-direction: column;
+			gap: 5px;
+			background-color: #fff;
+			opacity: 0;
+			visibility: hidden;
+			max-height: 0;
+			overflow: hidden;
+			transition:
+				max-height 0.3s ease,
+				opacity 0.3s ease;
+			padding: 0px 0px 0px 10px;
+
+			li {
+				a {
+					color: $mainColor;
+					text-transform: none;
+					font-size: 22px;
+					font-weight: 300;
+					line-height: 120%;
+					letter-spacing: 0.66px;
+				}
+			}
+		}
+	}
+
+	&__contacts {
+		padding-top: 20px;
+		display: flex;
+		flex-direction: column;
+		gap: 7px;
 	}
 }
 
@@ -104,12 +419,16 @@
 
 .icon-menu {
 	display: none;
-	@media (max-width: $mobile) {
+	@media (max-width: 1360px) {
 		display: block;
 		position: relative;
-		width: rem(30);
-		height: rem(18);
-		z-index: 5;
+		width: 68px;
+		height: 68px;
+		flex: 0 0 68px;
+		z-index: 50;
+		background-color: #eaf3fa;
+		border: none;
+		padding: 0;
 		@media (any-hover: none) {
 			cursor: default;
 		}
@@ -119,32 +438,21 @@
 			content: "";
 			transition: all 0.3s ease 0s;
 			right: 0;
+			left: 0;
+			margin: 0 auto;
 			position: absolute;
-			width: 100%;
+			width: 25px;
 			height: rem(2);
-			background-color: #000;
+			background-color: $accentColor;
 		}
 		&::before {
-			top: 0;
+			top: 28px;
 		}
 		&::after {
-			bottom: 0;
+			bottom: 28px;
 		}
 		span {
 			top: calc(50% - rem(1));
-		}
-		.menu-open & {
-			span {
-				width: 0;
-			}
-			&::before {
-				top: calc(50% - rem(1));
-				transform: rotate(-45deg);
-			}
-			&::after {
-				bottom: calc(50% - rem(1));
-				transform: rotate(45deg);
-			}
 		}
 	}
 }
