--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -34,12 +34,20 @@
 				font-weight: 400;
 				font-size: 18px;
 				line-height: 130%;
+
+				@media (max-width: $mobile) {
+					font-size: 16px;
+				}
 			}
 
 			span {
 				font-weight: 400;
 				font-size: 18px;
 				line-height: 130%;
+
+				@media (max-width: $mobile) {
+					font-size: 16px;
+				}
 			}
 		}
 	}
