--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -177,6 +177,8 @@ body {
 @import "./components/service";
 @import "./components/advantages";
 @import "./components/news";
+@import "./components/page";
+@import "./components/reviews";
 
 // Подключение стилей отдельных страниц
 @import "home";
